# navi-bootstrap

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  DEBT.md  GOVERNANCE.md  README-draft.md  README.md  SECURITY.md  action.yml  nboot-spec.json  pyproject.toml  zensical.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: _build-reusable.yml  codeql.yml  docs.yml  fuzz.yml  grippy-review.yml  release.yml  scorecard.yml  semgrep.yml  tests.yml
docs/: index.md  navi-sanitize-exec-summary.md
docs/explanation/: architecture.md  security-model.md
docs/getting-started/: quickstart.md
docs/how-to/: contributing.md
docs/plans/: 2026-03-02-infra-lift-design.md  2026-03-02-infra-lift.md  2026-03-02-navi-sanitize-integration-design.md  2026-03-02-navi-sanitize-integration.md
docs/reference/: changelog.md  cli.md  packs.md
docs/stylesheets/: navi.css
fuzz/: fuzz_sanitize.py
packs/base/: manifest.yaml
packs/base/templates/: AGENTS.md.j2  pyproject-tools.toml.j2
packs/scaffold/: manifest.yaml
packs/scaffold/templates/: LICENSE.j2  README.md.j2  conftest.py.j2  gitignore.j2  init.py.j2  (+2 more)
schema/: spec-schema.json
src/navi_bootstrap/: __init__.py  cli.py  engine.py  hooks.py  manifest.py  packs.py  resolve.py  sanitize.py  spec.py  validate.py
tests/: test_base_pack.py  test_cli.py  test_engine.py  test_integration.py  test_new.py  test_packs.py  test_resolve.py  test_scaffold_pack.py
tests/adversarial/: conftest.py  test_full_pipeline.py  test_path_traversal.py  test_template_injection.py  test_unicode_hostile.py
(+2 files in other folders)
